RESOLVED FIXED164210
[CSS Parser] Fix nth-child serialization
https://bugs.webkit.org/show_bug.cgi?id=164210
Summary [CSS Parser] Fix nth-child serialization
Dave Hyatt
Reported 2016-10-30 15:25:43 PDT
[CSS Parser] Fix nth-child serialization
Attachments
Patch (3.18 KB, patch)
2016-10-30 15:29 PDT, Dave Hyatt
darin: review+
Dave Hyatt
Comment 1 2016-10-30 15:29:21 PDT
Darin Adler
Comment 2 2016-10-30 15:33:23 PDT
Comment on attachment 293371 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=293371&action=review I assume all of this gets covered by tests when we turn on the new CSS parser? > Source/WebCore/css/parser/CSSSelectorParser.cpp:544 > + const CSSParserToken& argumentStart = block.peek(); Why not auto&? > Source/WebCore/css/parser/CSSSelectorParser.cpp:565 > + const CSSParserToken& argumentEnd = block.peek(); Why not auto&?
Dave Hyatt
Comment 3 2016-10-30 15:36:05 PDT
Landed in r208133.
Note You need to log in before you can comment on or make changes to this bug.