Source/WebCore/css/parser/CSSParserToken.cpp
@@ -412,6 +412,8 @@ void CSSParserToken::serialize(StringBuilder& builder) const
         return builder.append(delimiter());
     case NumberToken:
         // These won't properly preserve the NumericValueType flag
+        if (m_numericSign == PlusSign)
+            builder.append('+');
         return builder.appendNumber(numericValue());
     case PercentageToken:
         builder.appendNumber(numericValue());
